update copyright years
Change-Id: I401970c16b1960584d26e073ddb683370a447498
Signed-off-by: Diego Dias <diego.dias@kernkonzept.com>

--- a/l4sys/doc/kernel-objects.dox
+++ b/l4sys/doc/kernel-objects.dox
@@ -1,6 +1,6 @@
 /* vim:set ft=c: */
 /*
- * Copyright (C) 2021-2022, 2024 Kernkonzept GmbH.
+ * Copyright (C) 2021-2022, 2024-2025 Kernkonzept GmbH.
  *
  * License: see LICENSE.spdx (in this directory or the directories above)
  */
